# anydesk-agent

./: .gitignore  IMPROVEMENTS.md  README.md  emergency_release.py  pyproject.toml  requirements.txt  run_tests.py  setup.py
.github/workflows/: anydesk.yml
examples/: README.md  claude_desktop_config.json  test_remoteuse.py
remoteuse/core/: __init__.py  actions.py
remoteuse/server/: mcp_server.py
tests/: test_actions.py  test_mcp_server.py
